--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ li::before {
     display: inline-block;
     height: 10px;
     width: 10px;
-    background-image: url("../star.webp  ");
+    background-image: url("../star.webp");
     background-size: 10px 10px;
 }
 
@@ -33,13 +33,24 @@ section {
     padding: 20px;
 }
 
+header img {
+    border-radius: 100vmax;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+}
+
 table {
-    background-color: darkblue;
     color: lightgray;
     max-width: 300px;
     margin: auto;
 }
 .contact{
+    padding: 20px;
+    background-color: darkblue;
+
+}
+.contact h2 {
+    color: lightgray;
     text-align: center;
 }
 
@@ -58,6 +69,11 @@ main {
     margin:auto;
 }
 
+/* Toutes les calss "colonne" qui n'est pas le dernier element */
+.colonne:not(:last-child) {
+    border-bottom: 1px solid darkblue;
+}
+
 .colonne, header {
     display: flex;
     gap: 1rem;
@@ -72,4 +88,8 @@ main {
 
 .competence, .loisir {
     text-align: center;
+}
+
+.starling {
+    justify-content: flex-end ;
 }
