--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ li::before {
     display: inline-block;
     height: 10px;
     width: 10px;
-    background-image: url("../star.webp");
+    background-image: url("../etoile.png");
     background-size: 10px 10px;
 }
 
