--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body{
     padding: 0;
     background-color: lightgrey;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "all-round-gothic", sans-serif;
+    font-weight: 400;
+    font-style: normal;;
     color: darkblue;
 }
 
@@ -9,7 +11,9 @@ h1,
 h2,
 h3,
 h4 {
-    font-family: "Agbalumo", serif;
+    font-family: "ohno-blazeface", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 h1{
